# chatbot_mcp

./: ARCHITECTURE.md  DEMO.md  README.md  agent.py  app.py  pyproject.toml  requirements.txt
src/: __init__.py  agent.py  main.py
